--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "I know that the appearance of Los Angeles at four o'clock in the morning every day."
 ---
 
 {% for post in paginator.posts %}
