--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is YR."
-header-img: "img/post-bg-debug.png"
+header-img: "img/post-bg-universe.jpg"
 ---
 
 <!-- Language Selector -->
